<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FridgeAware</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Nope</string>
    <string name="button_additem">Add Item</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="edit_name_hint">Enter a Name...</string>
    <string name="edit_name_label">Name:</string>
    <string name="edit_picture_label">Picture:</string>
    <string name="edit_notifications_label">Notifcation Settings:</string>
    <string name="edit_category_label">Category:</string>
    <string name="edit_category_hint">Enter a Category...</string>
    <string name="button_done">Done</string>
    <string name="button_remove">Remove From Fridge</string>
    <string name="edit_expiry_label">Expiry Date:</string>
    <string name="button_cancel">Cancel</string>
    <string name="search_hint">Search food items</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="button_sortalpha">Sort Alphabetically</string>
    <string name="button_sortexpiry">Sort by Expiry Date</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="title_activity_edit_item">Edit Food Item</string>

</resources>