<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="20dp"
	    android:orientation="vertical">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_name_label" />
	    
	    <EditText
	        android:id="@+id/edit_name"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="220dp"
	        android:hint="@string/edit_name_hint" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_expiry_label" />
	    
	    <DatePicker
	        android:id="@+id/edit_picker_expiry"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_notifications_label" />
	    
	    <Spinner
		    android:id="@+id/edit_spinner_notifications"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="horizontal">
		    <Button
		        android:id="@+id/edit_button_cancel"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/button_cancel"/>
		    <Button
		        android:id="@+id/edit_button_done"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/button_done"/>
	    </LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="horizontal">
		    <Button
		        android:id="@+id/edit_button_remove"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/button_remove"/>
	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>