<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodItemListActivity"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_name_label" />
    
    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name_hint" />
    
    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_done"/>
    
</LinearLayout>